# sembla

./: .gitignore  .piprd-config.json  Cargo.toml  DECISIONS.md  DESIGN.md  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  gpu-differential.yml
.pi-subagents/artifacts/: 05ed1b28_oracle_1_input.md  05ed1b28_oracle_1_meta.json  05ed1b28_oracle_1_output.md  05ed1b28_oracle_1_transcript.jsonl  05ed1b28_planner_0_input.md  05ed1b28_planner_0_meta.json  05ed1b28_planner_0_output.md  05ed1b28_planner_0_transcript.jsonl  141659dd_oracle_1_input.md  141659dd_oracle_1_meta.json  141659dd_oracle_1_output.md  141659dd_oracle_1_transcript.jsonl  141659dd_reviewer_0_input.md  141659dd_reviewer_0_meta.json  (+46 more)
.piprd/: log.jsonl  run-state.json
crates/sembla-cli/: Cargo.toml
crates/sembla-cli/src/: main.rs  manifest.rs
crates/sembla-cli/tests/: backend_selection.rs  canonical_models.rs  gpu_differential.rs  observation.rs  run.rs  run_manifest.rs  sweep.rs  validate.rs
crates/sembla-cli/tests/fixtures/: pairs_model.json  sir_legacy.csv  sir_policy_all_rules.csv  sweep_draw_0_legacy.csv  sweep_draw_1_legacy.csv  sweep_manifest_legacy.csv  sweep_summary_legacy.csv
crates/sembla-cuda/: Cargo.toml  GPU-STATUS.md  README.md
crates/sembla-cuda/examples/: generate_sir_golden.rs
crates/sembla-cuda/scripts/: run-differential-corpus.sh  run-gpu-tests.sh
crates/sembla-cuda/src/: availability.rs  backend.rs  backend_stub.rs  codegen.rs  error.rs  lib.rs
crates/sembla-cuda/tests/: absence.rs  gpu_oracle.rs  gpu_philox.rs  gpu_semantics.rs
crates/sembla-cuda/tests/fixtures/: sir.generated.cu
docs/: ROADMAP.md  ci.md  cuda-differential-harness.md  sembla-assessment.md  sembla-visual-guide.md  sembla-vs-pfclbs.md
examples/: noisy_voter.json  observations.json  radioactive_decay_chain.json  reversible_ctmc.json  seirs_waning.json  sir.json  sir_policy.json  sis_importation.json  two_box.json  two_box_merged.json  two_state.json
frontend/: Main.lean  README.md  Sembla.lean  lake-manifest.json  lakefile.toml
scripts/: check-determinism.sh  check-lean.sh  check-npe-smoke.sh  check-workflow-yaml.rb  check.sh
spikes/precision/: Cargo.toml  H100-PREFLIGHT-2026-07-18.md  README.md  RESULTS.md  build.rs
spikes/precision/evidence/: 2026-07-19-cuda-differential-corpus.md
spikes/precision/evidence/cuda-differential-corpus-20260719/: SHA256SUMS  provenance.txt
spikes/precision/evidence/hyperstack-h100-20260718/: README.md  RESULTS.run-1.md  RESULTS.run-2.md  RESULTS.run-3.md  nvidia-smi-q.txt  repository-commit.txt  run-collection-id.txt  selected-profile.json  ssh-host-key.pub  ssh-self-test.pub  trusted-ssh-host-fingerprint.txt
spikes/precision/infra/: .gitignore  README.md  cloud-init.sh.tftpl  example.tfvars  main.tf  outputs.tf  run-spike.sh  variables.tf  versions.tf
spikes/precision/infra-hyperstack/: .gitignore  .terraform.lock.hcl  README.md  cloud-init.sh.tftpl  collect-runs.sh  discover.sh  example.tfvars  main.tf  outputs.tf  prepare-console-password.sh  remote-run-spike.sh  review-paid-plan.py  variables.tf  verify-artifacts.py  versions.tf
spikes/precision/infra-vultr/: .gitignore  .terraform.lock.hcl  README.md  cloud-init.sh.tftpl  discover.sh  example.tfvars  main.tf  outputs.tf  run-spike.sh  variables.tf  versions.tf
spikes/precision/src/: benchmark.rs  cuda.rs  f64_mirror.rs  fp64.rs  gpu.rs  lib.rs  main.rs  native_f64.rs  oracle.rs  results.rs  timing.rs  workload.rs
spikes/precision/src/cuda/: f64_native.cu
spikes/precision/src/wgsl/: df64.wgsl  f64_native.wgsl  portable.wgsl
(+246 files in other folders)
