[workspace]
members = [
    "crates/sembla-cli",
    "crates/sembla-cuda",
    "crates/sembla-ir",
    "crates/sembla-runtime",
]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2021"

# PRD 0013 exercises 100 million row-ticks in an integration test. Keep the
# test oracle single-threaded, but compile it sufficiently to finish in CI.
[profile.test]
opt-level = 2
