[package]
name = "sembla-cuda"
version.workspace = true
edition.workspace = true

[features]
default = []
cuda = ["dep:cudarc"]

[dependencies]
sembla-ir = { path = "../sembla-ir" }
sembla-runtime = { path = "../sembla-runtime" }
sha2 = "0.10"
cudarc = { version = "=0.17.6", optional = true, default-features = false, features = ["std", "driver", "nvrtc", "dynamic-loading", "cuda-12080"] }

[dev-dependencies]
serde_json = { version = "1.0", features = ["float_roundtrip"] }
